# gtbot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  tbot.code-workspace
cmake/: options.cmake  prelude.cmake
cmake/utils/: config.cmake  detect_platform.cmake  functions.cmake
docs/: build_project.md  project_structure.md
libraries/: deps.cmake
sources/: source.cmake
sources/bot/: CMakeLists.txt
sources/bot/include/bot/: ibot.hpp  ibrain.hpp
sources/bot/source/: bot.cpp
sources/core/: CMakeLists.txt
sources/core/include/core/: aliases.hpp  common  constants.hpp  precompiled.hpp
sources/core/include/core/config/: ini.hpp
sources/core/include/core/resources/: manager.hpp
sources/core/include/core/types/: id.hpp  name_holder.hpp
sources/core/include/core/utils/: random.hpp  traits.hpp
sources/core/source/config/: ini.cpp
sources/core/source/resources/: manager.cpp
sources/core/source/types/: name_holder.cpp
sources/neural/: CMakeLists.txt
sources/neural/include/neural/: constants.hpp  dataset.hpp  edge.hpp  layer.hpp  network.hpp  neuron.hpp
sources/neural/include/neural/activation/: function.hpp  linear_function.hpp  relu_function.hpp  sigmoid_function.hpp
sources/neural/source/: dataset.cpp  edge.cpp  layer.cpp  network.cpp  neuron.cpp
sources/neural/source/activation/: function.cpp  linear_function.cpp  relu_function.cpp  sigmoid_function.cpp
sources/platform/win/: CMakeLists.txt  main.cpp
sources/tests/: CMakeLists.txt
sources/tests/sources/: test_dataset.cpp  test_ini_config.cpp
tools/: make_dataset.py
